Decoupling random seeds

--- a/notebooks/Lab_module_1.ipynb
+++ b/notebooks/Lab_module_1.ipynb
@@ -125,9 +125,9 @@
     "        self.env = env\n",
     "        # random seed is only set once when the agent is initialized\n",
     "        self.env.seed(ran_seed)\n",
-    "        self.env.action_space.seed(ran_seed)  # why isnt this set at env.seed?\n",
-    "        self.env.observation_space.seed(ran_seed)\n",
-    "        self.random_state = np.random.RandomState(ran_seed)\n",
+    "        self.env.action_space.seed(ran_seed+1)  # why isnt this set at env.seed?\n",
+    "        self.env.observation_space.seed(ran_seed+2)\n",
+    "        self.random_state = np.random.RandomState(ran_seed+3)\n",
     "        self.observation_space = env.observation_space\n",
     "        space = gym.spaces.utils.flatten_space(self.observation_space)\n",
     "        # sanitize the observation space\n",
