--- a/notebooks/Lab_module_1.ipynb
+++ b/notebooks/Lab_module_1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Welcome to the first lab module of the RL course!"
+    "Welcome to the first lab module of the RL course! This notebook is uploaded to canvas, but is mainly hosted on GitHub at [my repo](https://github.com/yusenz/RL_course.git), which currently contains this lab module and the docker scripts for the server. You can pull the repo in colab instead of manually uploading the notebook, or run things locally."
    ]
   },
   {
@@ -17,7 +17,9 @@
     "\n",
     "To start with colab, you need to click the \"connect\" button on the top right corner to allocate a VM for the notebook, you would want to change to GPU if it shows CPU - it does not matter for the simple algorithms in this module but it would matter later. \n",
     "\n",
-    "Then you can run the following cells to install the dependencies. It should take 2~3 minutes to finish. Run the next cell to check if GPU is enabled."
+    "Then you can run the following cells to install the dependencies. It should take 2~3 minutes to finish. Run the next cell to check if GPU is enabled.\n",
+    "\n",
+    "Alternatively, you can run the `./run_docker.sh` script in the git repo to pull a docker container with all the dependencies installed. You would need to have docker installed on your machine (or podman, or you can reach out to me if you want to use apptainer on BMI cluster). But this should be a lot easier than setting up the environment manually. The run docker script will start a jupyter notebook server on your local machine, with the address and login token printed in terminal stdout. You can then copy the address and paste it in your browser or your IDE ipykernel selection to execute the notebook."
    ]
   },
   {
@@ -26,6 +28,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Only run this cell if you are using Google Colab\n",
+    "## Skip with docker container\n",
+    "## Technically you can run these commands on your local (linux distro with apt) machine to have things installed in local environment, preferrably using conda or python venv, but overall not recommended\n",
+    "\n",
     "!apt-get update && apt-get install swig cmake ffmpeg freeglut3-dev xvfb\n",
     "!git clone https://github.com/DLR-RM/rl-baselines3-zoo\n",
     "%cd /content/rl-baselines3-zoo/\n",
@@ -810,6 +816,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
