Fix: should use the private maze property of mazeview2d

--- a/notebooks/Lab_module_1.ipynb
+++ b/notebooks/Lab_module_1.ipynb
@@ -657,9 +657,9 @@
     "\n",
     "            ## this will return True if the action goes through without hitting a wall, False otherwise, I will leave it here for you to use\n",
     "            if not isinstance(action, int):  ## NSEW action\n",
-    "                is_open = self.env.maze_view.is_open(state, action)\n",
+    "                is_open = self.env.maze_view._MazeView2D__maze.is_open(state, action)\n",
     "            else:\n",
-    "                is_open = self.env.maze_view.is_open(state, self.env.ACTION[action])\n",
+    "                is_open = self.env.maze_view._MazeView2D__maze.is_open(state, self.env.ACTION[action])\n",
     "\n",
     "\n",
     "\n",
