import gym for oscillator

--- a/notebooks/project.ipynb
+++ b/notebooks/project.ipynb
@@ -183,6 +183,7 @@
    },
    "outputs": [],
    "source": [
+    "import gym\n",
     "import rl_dbs.gym_oscillator\n",
     "import rl_dbs.oscilator_cpp\n",
     "env = gym.make('oscillator-v0')"
