Cleanup of testing code; Colab init

--- a/notebooks/test_cardiac.ipynb
+++ b/notebooks/test_cardiac.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +78,14 @@
    ],
    "source": [
     "from rl_cardiac.cardiac_model import CardiacModel_Env\n",
-    "class testenv(CardiacModel_Env):\n",
-    "    def reset(self,seed=None):\n",
-    "        if seed is not None:\n",
-    "            self.seed = seed\n",
-    "        return super().reset(), []\n",
+    "# class testenv(CardiacModel_Env):\n",
+    "#     def reset(self,seed=None):\n",
+    "#         if seed is not None:\n",
+    "#             self.seed = seed\n",
+    "#         return super().reset(), []\n",
     "rat_type = 'healthy_stable'\n",
     "tcn_model = TCN_config(rat_type)\n",
-    "env = testenv(tcn_model, rat_type)"
+    "env = CardiacModel_Env(tcn_model, rat_type)"
    ]
   },
   {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16426,7 +16426,7 @@
     "model = PPO(\"MlpPolicy\", env, verbose = 1,  learning_rate = 0.002, n_steps=128, batch_size = 4, n_epochs=4, clip_range = 0.2, gamma = 0.95, vf_coef =1, ent_coef = 0.005, policy_kwargs = policy_kwargs )\n",
     "env.seed = 42\n",
     "env.reset()\n",
-    "model.learn(total_timesteps=100000)"
+    "model.learn(total_timesteps=10000)"
    ]
   }
  ],
