--- a/notebooks/test_rl_dbs.ipynb
+++ b/notebooks/test_rl_dbs.ipynb
@@ -11,174 +11,8 @@
     "import rl_dbs.gym_oscillator.envs\n",
     "import rl_dbs.oscillator_cpp\n",
     "import numpy as np\n",
-    "# env = gym.make('oscillator-v0')\n",
-    "# env = rl_dbs.gym_oscillator.envs.oscillatorEnv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rl_dbs.oscillator_cpp as oscillator_cpp\n",
-    "from gymnasium.spaces import Box\n",
-    "class oscillatorEnv(gym.Env):\n",
-    "  metadata = {'render.modes': ['human']}\n",
-    "  def __init__(self, len_state=250, ep_length=10000, nosc=1000, epsilon=0.03, frrms=0.1,random=False,\n",
-    "               sigmoid=False):\n",
-    "\n",
-    "    \"\"\" \n",
-    "    Init function:\n",
-    "    sigmoid: Function that we observe instead of original one: Bool\n",
-    "    len_state: shape of state that agent observes [250,1]: integer\n",
-    "\n",
-    "    BVDP params\n",
-    "    nosc: number of oscillators: integer\n",
-    "    epsilon: coupling parameter: float\n",
-    "    frrms: width of the distribution of natural frequencies: float\n",
-    "    \"\"\"\n",
-    "\n",
-    "    super(oscillatorEnv, self).__init__()\n",
-    "    #Call init function and save params\n",
-    "    if random:\n",
-    "        epsilon = np.random.uniform(0.03,0.5)\n",
-    "    self.y = oscillator_cpp.init(nosc,epsilon,frrms)\n",
-    "    self.nosc = nosc\n",
-    "    self.epsilon = epsilon\n",
-    "    self.frrms = frrms\n",
-    "    \n",
-    "    self.ep_length = ep_length\n",
-    "\n",
-    "    #Dimensionality of our observation space\n",
-    "    self.dim = 1\n",
-    "    self.action_space = Box(low=-1, high=1, shape=(1,), dtype=np.float32)\n",
-    "    self.observation_space = Box(low=-1.5, high=1.5, shape=(len_state,), dtype=np.float32)\n",
-    "\n",
-    "    #Meanfield for all neurons\n",
-    "    self.x_val = oscillator_cpp.Calc_mfx(self.y)\n",
-    "    self.y_val = oscillator_cpp.Calc_mfy(self.y)\n",
-    "\n",
-    "    #Episode Done?\n",
-    "    self.done = False\n",
-    "    self.current_step = 0 \n",
-    "\n",
-    "    #Our current state, with length(1,len_state)\n",
-    "    self.y_state = []\n",
-    "    self.x_state = []\n",
-    "    #Our actions \n",
-    "    #self.actions = []\n",
-    "    \n",
-    "    self.len_state = len_state\n",
-    "    \n",
-    "    #Reset environment\n",
-    "    self.reset()\n",
-    "\n",
-    "  def step(self, action):\n",
-    "      \"\"\"\n",
-    "      Function that called at each step.\n",
-    "\n",
-    "      action: signal to make perturbation: [[float]]\n",
-    "      returns: arrayed_version:np.array(1,len_state), \n",
-    "      Reward: Our reward function :float, \n",
-    "      done: Does it end? :Bool, \n",
-    "      additional_information: Nothing to show :( :{} \n",
-    "      \"\"\"\n",
-    "      \n",
-    "      #Vectorized form for stable baselines\n",
-    "      val = float(action[0])\n",
-    "      self.y = oscillator_cpp.Pertrubation(self.y, val)\n",
-    "      self.y = oscillator_cpp.Make_step(self.y)\n",
-    "      \n",
-    "          \n",
-    "      #Calculate MeanField\n",
-    "      self.x_val = oscillator_cpp.Calc_mfx(self.y)\n",
-    "      self.y_val = oscillator_cpp.Calc_mfy(self.y)\n",
-    "      \n",
-    "      #if sigmoid:\n",
-    "          #self.x_val = sigmoid(self.x_val)\n",
-    "          #self.y_val = sigmoid(self.y_val)\n",
-    "      \n",
-    "      #Save our state\n",
-    "      self.y_state.append(self.y_val)\n",
-    "      self.x_state.append(self.x_val)\n",
-    "      \n",
-    "      #Check length of our state\n",
-    "      if len(self.y_state) > self.len_state:\n",
-    "          self.y_state = self.y_state[1:]\n",
-    "          self.x_state = self.x_state[1:]\n",
-    "\n",
-    "      self.current_step += 1\n",
-    "\n",
-    "      self.done = self.current_step >= self.ep_length\n",
-    "\n",
-    "      #Make vectorized form\n",
-    "      arrayed_version = np.array(self.y_state)\n",
-    "      \n",
-    "      #if sigmoid:\n",
-    "          #arrayed_version = sigmoid(arrayed_version)\n",
-    "          \n",
-    "      return arrayed_version, self.Reward(self.x_val,self.x_state,val), False, self.done, {} \n",
-    "\n",
-    "  \n",
-    "  def reset(self, seed=None):\n",
-    "    \"\"\"\n",
-    "    Reset environment, and get a window 250 of self.len_state size\n",
-    "\n",
-    "    Returns:arrayed_version:np.array(1,len_state)\n",
-    "\n",
-    "    \"\"\"\n",
-    "    self.current_step = 0 \n",
-    "    self.y_state = []\n",
-    "    self.x_state = []\n",
-    "    self.y = oscillator_cpp.init(self.nosc,self.epsilon,self.frrms)\n",
-    "\n",
-    "    for i in range(self.len_state):\n",
-    "        oscillator_cpp.Make_step(self.y)\n",
-    "        \n",
-    "        self.x_val = oscillator_cpp.Calc_mfx(self.y)\n",
-    "        self.y_val = oscillator_cpp.Calc_mfy(self.y)\n",
-    "\n",
-    "        self.y_state.append(self.y_val)\n",
-    "        self.x_state.append(self.x_val)\n",
-    "        \n",
-    "        #Check length of our state\n",
-    "        if len(self.y_state) > self.len_state:\n",
-    "            self.y_state = self.y_state[1:]\n",
-    "            self.x_state = self.x_state[1:]\n",
-    "\n",
-    "    arrayed_version = np.array(self.y_state)    \n",
-    "    \n",
-    "    #if sigmoid:\n",
-    "        #arrayed_version = sigmoid(arrayed_version)\n",
-    "    return arrayed_version, []\n",
-    "    \n",
-    "  def render(self, mode='human', close=False):\n",
-    "    \"\"\"\n",
-    "    Pass...\n",
-    "    \"\"\"\n",
-    "    pass\n",
-    "\n",
-    "  def Reward(self, x,x_state,action_value,baseline = False):\n",
-    "    \"\"\"\n",
-    "    Super duper reward function, i am joking, just sum of absolute values which we supress + penalty for actions\n",
-    "    returns: float\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return -(x-np.mean(x_state))**2 - 2*np.abs(action_value)\n",
-    "\n",
-    "def sigmoid(x):\n",
-    "    x_0 = 1.2\n",
-    "    return 1. / (1. + np.exp(-x/x_0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env = oscillatorEnv()"
+    "env = gym.make('oscillator-v0')\n",
+    "env = rl_dbs.gym_oscillator.envs.oscillatorEnv()"
    ]
   },
   {
