--- a/notebooks/project.ipynb
+++ b/notebooks/project.ipynb
@@ -32,7 +32,8 @@
     "!apt-get update\n",
     "!apt-get install -y python3.7 python3.7-dev python3.7-distutils python3-pip\n",
     "!apt-get update && apt-get install swig cmake ffmpeg freeglut3-dev xvfb\n",
-    "%pip install -r requirements.txt\n",
+    "%pip install gymnasium\n",
+    "%pip install --ignore-installed rl-zoo3==2.0.0\n",
     "%cd /content/\n",
     "!git clone https://github.com/yusenz/gym-maze.git\n",
     "%cd /content/gym-maze\n",
@@ -167,6 +168,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from stable_baselines3 import PPO\n",
+    "policy_kwargs = dict(net_arch=[64])\n",
+    "model = PPO(\"MlpPolicy\", env, verbose = 1,  learning_rate = 0.002, n_steps=128, batch_size = 4, n_epochs=4, clip_range = 0.2, gamma = 0.95, vf_coef =1, ent_coef = 0.005, policy_kwargs = policy_kwargs )\n",
+    "env.seed = 42\n",
+    "env.reset()\n",
+    "model.learn(total_timesteps=10000)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -190,6 +209,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from stable_baselines3 import PPO\n",
+    "policy_kwargs = dict(net_arch=[64])\n",
+    "model = PPO(\"MlpPolicy\", env, verbose = 1,  learning_rate = 0.002, n_steps=128, batch_size = 4, n_epochs=4, clip_range = 0.2, gamma = 0.95, vf_coef =1, ent_coef = 0.005, policy_kwargs = policy_kwargs )\n",
+    "env.seed = 42\n",
+    "env.reset()\n",
+    "model.learn(total_timesteps=10000)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -208,6 +245,24 @@
    "source": [
     "from TVB.tvb_wrapper import TVBWrapper\n",
     "env = TVBWrapper(timestep=10, history_len=200, max_len=6000, dt=0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from stable_baselines3 import PPO\n",
+    "policy_kwargs = dict(net_arch=[64])\n",
+    "model = PPO(\"MlpPolicy\", env, verbose = 1,  learning_rate = 0.002, n_steps=128, batch_size = 4, n_epochs=4, clip_range = 0.2, gamma = 0.95, vf_coef =1, ent_coef = 0.005, policy_kwargs = policy_kwargs )\n",
+    "env.seed = 42\n",
+    "env.reset()\n",
+    "model.learn(total_timesteps=10000)"
    ]
   }
  ],
