Instruction updated & tested.

--- a/notebooks/project.ipynb
+++ b/notebooks/project.ipynb
@@ -11,9 +11,17 @@
     "### Colab\n",
     "Use the block below. I removed the rl-zoo part comparing to the lab module. You can add it back with `%pip install --ignore-installed rl-zoo3==2.0.0` most likely (works in docker, not tested for colab). Do not forget to save a separate copy of the notebook to your drive.\n",
     "### Local\n",
-    "Use the colab block, except the things you clone will be in the current folder or your specified folder instead of /content, and you want to use conda to manage environments most likely.\n",
-    "### Import notice\n",
-    "Since a lot of the imports rely on files in this repo, you may need to clone the repo, cd to the repo root and run the notebook from there. "
+    "Use the colab block, except the things you clone will be in the current folder or your specified folder instead of /content, and you want to use conda to manage environments most likely.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For google colab\n",
+    "Do NOT restart kernel(runtime/session) as google prompted DURING the execution of the following cell. \n",
+    "\n",
+    "Restart the kernel(runtime/session) AFTER the execution of the following cell is completed."
    ]
   },
   {
@@ -28,9 +36,6 @@
    "source": [
     "!apt-get update \n",
     "!apt-get install -y software-properties-common\n",
-    "!add-apt-repository ppa:deadsnakes/ppa\n",
-    "!apt-get update\n",
-    "!apt-get install -y python3.7 python3.7-dev python3.7-distutils python3-pip\n",
     "!apt-get update && apt-get install swig cmake ffmpeg freeglut3-dev xvfb\n",
     "%pip install gymnasium\n",
     "%pip install --ignore-installed rl-zoo3==2.0.0\n",
@@ -41,9 +46,31 @@
     "%cd /content/\n",
     "%pip install opencv-python-headless\n",
     "%pip install scikit-learn==0.23.2\n",
-    "%pip install tensorflow[and-cuda]==2.9.1\n",
     "%pip install tvb-library\n",
-    "%pip install tvb-framework"
+    "%pip install tvb-framework\n",
+    "%pip install tensorflow[and-cuda]==2.9.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import notice\n",
+    "Since a lot of the imports rely on files in this repo, you may need to clone the repo, cd to the repo root and run the notebook from there. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/yusenz/RL_course.git\n",
+    "%cd /content/RL_course"
    ]
   },
   {
@@ -202,10 +229,11 @@
    },
    "outputs": [],
    "source": [
-    "import gym\n",
+    "import gymnasium as gym\n",
     "import rl_dbs.gym_oscillator\n",
-    "import rl_dbs.oscilator_cpp\n",
-    "env = gym.make('oscillator-v0')"
+    "import rl_dbs.gym_oscillator.envs\n",
+    "import rl_dbs.oscillator_cpp\n",
+    "env = rl_dbs.gym_oscillator.envs.oscillatorEnv()"
    ]
   },
   {
