--- a/notebooks/test_rl_dbs.ipynb
+++ b/notebooks/test_rl_dbs.ipynb
@@ -11,7 +11,7 @@
     "import rl_dbs.gym_oscillator.envs\n",
     "import rl_dbs.oscillator_cpp\n",
     "import numpy as np\n",
-    "env = gym.make('oscillator-v0')\n",
+    "# env = gym.make('oscillator-v0')\n",
     "env = rl_dbs.gym_oscillator.envs.oscillatorEnv()"
    ]
   },
